Ensure images don't get too large for viewing

--- a/Source/JabbR.Eto.Mac/Styles/default/styles.css
+++ b/Source/JabbR.Eto.Mac/Styles/default/styles.css
@@ -106,6 +106,10 @@ pre.multiline {
 	padding: 5px;
 }
 
+.collapsible_box img {
+	max-width: 100%;
+}
+
 h3.collapsible_title {
 	color: #1C94C4;
 	font-size: smaller;
